# uniparc_xml_parser

./: .bumpversion.cfg  .flake8  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  paper.md  setup.cfg  setup.py
.conda/: build.sh  meta.yaml
biodata-parsers/: uniparc_xml_parser.py  vcf_parser.py
contrib/postgresql/: import.sql  schema.sql
docs/schema/: README.md
scripts/: csv_to_parquet.py
src/: lib.rs  main.rs  model.rs  properties.rs  writer.rs
tests/: test_uniparc_xml_parser.py  uniparc_all_topX.xml  uniprot_fasta_parser.py
tests/data/: extract_first_10k_elements.py  extract_top_k_elements.py
uniparc_xml_parser/: uniparc_xml_parser_new.py
