[package]
name = "biorustlings"
version = "0.0.2"
authors = ["ostrokach <ostrokach@gmail.com>"]
description = "Scripts for parsing UniParc XML files downloaded from the Uniprot website into CSV files."
homepage = "https://kimlab.gitlab.io/biorustlings"
documentation = "https://kimlab.gitlab.io/biorustlings"
repository = "https://gitlab.com/kimlab/biorustlings"
readme = "README.md"
license = "MIT"
exclude = [
    "tests/*",
]

[dependencies]
xml-rs = "0.7"
