[package]
name = "uniparc_xml_parser"
version = "0.1.1"
authors = ["ostrokach <ostrokach@gmail.com>"]
description = "Scripts for parsing UniParc XML files downloaded from the Uniprot website into CSV files."
homepage = "https://kimlab.gitlab.io/uniparc_xml_parser"
documentation = "https://kimlab.gitlab.io/uniparc_xml_parser"
repository = "https://gitlab.com/kimlab/uniparc_xml_parser"
readme = "README.md"
license = "MIT"
exclude = [
    "tests/*",
]

[dependencies]
xml-rs = "0.6"
